[package]
name = "lqthos"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = [ "full" ] }
log = "0"
tracing = "0.1"
ctrlc = "3.4.4"
once_cell = "1"
sysinfo = { version = "0", default-features = false, features = [ "system" ] }

lqos_bus = { git = "https://github.com/libreqoe/libreqos.git" }
#lqos_utils = { git = "https://github.com/libreqoe/libreqos.git" }
